# cours_work_4

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: api.py  apiiiii.py  config.py  connector.py  entities.py  user_interaction.py
tests/: test_vacansies.py
