[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Aleksei Ten <amailcn@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
tqdm = "^4.66.4"
prettytable = "^3.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
