[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Aleksei Ten <amailcn@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
tqdm = "^4.66.4"
prettytable = "^3.10.2"
dulwich = "^0.22.1"
fastjsonschema = "^2.20.0"
filelock = "^3.15.4"
idna = "^3.7"
iniconfig = "^2.0.0"
installer = "^0.7.0"
jaraco-classes = "^3.4.0"
keyring = "^25.2.1"
more-itertools = "^10.3.0"
msgpack = "^1.0.8"
packaging = "^24.1"
pexpect = "^4.9.0"
pip-tools = "^7.4.1"
pkginfo = "^1.11.1"
platformdirs = "^4.2.2"
pluggy = "^1.5.0"
ptyprocess = "^0.7.0"
pyproject-hooks = "^1.1.0"
pywin32-ctypes = "^0.2.2"
rapidfuzz = "^3.9.4"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
setuptools = "^71.0.3"
shellingham = "^1.5.4"
tomlkit = "^0.13.0"
trove-classifiers = "^2024.7.2"
urllib3 = "^2.2.2"
virtualenv = "^20.26.3"
wcwidth = "^0.2.13"
wheel = "^0.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
